[gd_scene load_steps=5 format=2]

[ext_resource path="res://hold e/hold e.tscn" type="PackedScene" id=1]
[ext_resource path="res://Dishes.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.1281, 46.998 )

[node name="Dishes" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.667419, 40.7126 )
shape = SubResource( 2 )

[node name="hold e" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -90 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="hold e/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="hold e"]
